# cmake-find-inja

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
preset-include/: .gitignore  user-cache-variables-readme.txt  user-cache-variables-template.json
